# python_sqlc_petstore

./: .gitignore  Makefile  docker-compose.yml  pyproject.toml
flyway/: Dockerfile
flyway/migrations/: V000001__setup_petstore.sql
flyway/scripts/: migrate.sh
local/: dummy_data.sql
src/: debugger.py
src/adapters/postgres_repository/: pet_store.py  sqlc.yaml  transformers.py
src/adapters/postgres_repository/queries/: petstore.sql
src/core/: domain.py  ports.py
src/pkg/db_sqlalchemy/: connection.py
src/tests/: conftest.py  helpers.py  test_postgres_repository.py  test_repo.py
src/tests/test_data/: owners.sql  pets.sql
