[tool.poetry]
name = "sqlc-python"
version = "0.1.0"
description = ""
authors = ["ericcbonet <ericcbonet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.29"
psycopg2 = "^2.9.9"
urllib3 = "^2.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
testcontainers = "^4.2.0"
jinja2 = "^3.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
